<resources>
    <string name="app_name">Avenue Beauty</string>
    <string name="app_resumen_cita">Datos de la cita</string>
    <string name="btn_resumen_cancelar">Rechazar</string>
    <string name="btn_resumen_aceptar">Confirmar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_pedir_cita">Elija su cita...</string>
    <string name="txt_bienvenida">¡Bienvenido a Avenue Beauty!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_empty_list">Sin citas</string>
    <string name="title_dialog_borrar">Anular cita</string>
    <string name="message_dialog_borrar">¿Quiere borrar la cita?</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_lista_de_tratamientos">Lista de tratamientos</string>
    <string name="title_informacion">Información</string>
    <string name="action_llamar">Información tienda</string>

    <!--Login-->
    <string name="titulo">Centro De Estética</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="registro">¿Aún no te has registrado? ¡Regístrate!</string>
    <string name="olvidarContraseña">¿Has olvidado la contraseña?</string>
    <string name="title_activity_registro">Sign in</string>
    <string name="confirmarPassword">Confirmar correo</string>
    <string name="registrar">Registrar</string>
    <!--String registro y login -->
    <string name="coincidir_correo">El correo no coincide</string>
    <string name="error_contraseña_corta">La contraseña debe tener más de 6 caracteres</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="titulo_registro">Registro</string>
    <string name="sin_citas">No tienes citas</string>
    <string name="action_preferencias">Tu cuenta</string>
    <string name="btn_elegir">Pedir cita</string>
    <string name="btn_descripcion_cerrar">Cerrar</string>
    <string name="app_descripcion">Información</string>
    <string name="action_config">Configuración</string>
    <string name="title_activity_configuracion">Configuración</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_categoria_entry_values">
        <item>Cuidados faciales</item>
        <item>Cuidados corporales</item>
        <item>Maquillaje</item>
        <item>Manos y pies</item>
        <item>Pestañas</item>
        <item>Depilación</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="category_creacion">ADMINISTRAR TRATAMIENTOS</string>
    <string name="config_add_tratamiento">Crear nuevo tratamiento</string>
    <string name="congif_summary_add">Añade un nuevo tratamiento a tu lista</string>
    <string name="config_modify_tratamiento">Modificar tratamiento</string>
    <string name="congif_summary_modify">Modifique los datos de cualquiera de sus servicios</string>
    <string name="config_delete_tratamiento">Borrar tratamiento</string>
    <string name="congif_summary_delete">Borre los tratamiento que no quiera más en su app</string>
    <string name="category_otros">OTRAS OPCIONES</string>
    <string name="summary_envio_mail">Permite recibir mensaje por correo cada vez que realizen o cancelen una cita</string>
    <string name="title_config_envio_mail">Confirmar citas</string>
    <string name="app_config">Configuración</string>
    <string name="hint_nombre_crear">Título (30 carac.)</string>
    <string name="hint_categoria_crear">Categoría</string>
    <string name="hint_descripcion_crear">Descripcion (100 carac.)</string>
    <string name="hint_esteticista_crear">Nombre de la esteticista</string>
    <string name="hint_precio_crear">Precio</string>
    <string name="app_crear_tratamiento">Nuevo tratamiento</string>
    <string name="tn_seleccion_imagen">Seleccione una imagen...</string>
    <string name="txt_cargando">Subiendo tratamiento...</string>
    <string name="app_borrar_tratamiento">Borrar tratamiento</string>
    <string name="txt_mensaje_borrar">Seleccione el tratamiento que quiere borrar:</string>
    <string name="error_campos_vacios">Por favor, rellene todos los campos</string>
    <string name="error_email_vacio">Por favor, ingrese un correo</string>
    <string name="error_confirmMail_vacio">Por favor, confirme el correo</string>
    <string name="error_contraseña_vacia">Por favor, ingrese una contraseña</string>
    <string name="error_cuenta_existente">Disculpe, la cuenta ya existe</string>
    <string name="registro_correcto">Registrado correctamente. Recibirá un correo de confirmación</string>
    <string name="nombreApellidos">Nombre y apellidos</string>
    <string name="DNI">DNI</string>
    <string name="telf">Teléfono:</string>
    <string name="enfermedades">Enfermedades</string>
    <string name="dispMedicos">Disp. Médicos</string>
    <string name="alergias">Alergias</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="aviso_correo_cambioPsw">Recibirá un correo con los pasos a seguir</string>
    <string name="error_nom_vacio">Por favor, ingrese nombre y apellidos</string>
    <string name="error_dni_vacio">Por favor, ingrese el dni correctamente</string>
    <string name="error_telf_vacio">Por favor, ingrese el teléfono correctamente</string>
    <string name="nuevo_correo">Nuevo correo</string>
    <string name="cambio_correo_usuario">Confirme el email en su nuevo correo</string>
    <string name="error_cambiar_correo">No ha sido posible completar la acción</string>
    <string name="app_datos_usuario">Datos personales</string>
    <string name="texto_modificar">Seleccione el tratamiento a modificar:</string>
    <string name="config_ver_usuario">Visualizar usuarios registrados</string>
    <string name="congif_summary_ver">Lista de usuarios registrados en tu aplicación</string>
    <string name="app_ver_usuarios">Usuarios registrados</string>
    <string name="correo_usuario">Enviar correo</string>
    <string name="llamar_usuario">Llamar</string>
    <string name="title_dialog_opciones">Opciones de usuario</string>
    <string name="message_dialog_opciones">¿Desea LLAMAR o escribir un CORREO?</string>
    <string name="txt_hint_mensaje">Escriba su mensaje...</string>
    <string name="title_dialog_mensaje">Enviar correo</string>
    <string name="title_dialog_nuevo_correo">Nuevo correo</string>
    <string name="config_ver_telefono">Configure el teléfono de la tienda</string>
    <string name="congif_summary_telefono">Cambiar teléfono tienda</string>
    <string name="txt_hint_dialog_telefono">Escriba el nuevo teléfono</string>
    <string name="title_dialog_telefono">Nuevo teléfono</string>
    <string name="config_ver_correo">Cambiar correo tienda</string>
    <string name="congif_summary_correo">Configure el correo de la tienda</string>
    <string name="category_ofertas">ADMINISTRAR OFERTAS</string>
    <string name="config_add_oferta">Crear nueva oferta</string>
    <string name="config_modify_oferta">Modificar oferta</string>
    <string name="config_delete_oferta">Borrar oferta</string>
    <string name="congif_summary_add_oferta">Añade una nueva oferta para la tienda</string>
    <string name="congif_summary_modify_oferta">Modifique los datos de las ofertas</string>
    <string name="congif_summary_delete_oferta">Borre las ofertas que ya no desee</string>
    <string name="txt_mensaje_borrar_oferta">Seleccione la oferta que quiera borrar:</string>
    <string name="app_borrar_oferta">Borrar oferta</string>
    <string name="app_crear_oferta">Nueva oferta</string>
    <string name="oferta_creada_exito">¡Oferta creada con éxito!</string>
    <string name="config_ver_img_oferta">Cambiar la imagen de fondo de las ofertas</string>
    <string name="congif_summary_img_oferta">Elija una imagen que colocar en las ofertas</string>
    <string name="app_info_tienda">Información de la tienda</string>
    <string name="limpiar">Limpiar</string>
    <string name="hint_nombre_crear_tra">Nombre</string>
    <string name="hint_descripcion_crear_tra">Descripción</string>
</resources>
