<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.adrin.proyecto_centro_estetico.InicioActivity">
    <item
        android:id="@+id/action_cerrar_sesion"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_llamar"
        android:icon="@drawable/common_full_open_on_phone"
        android:title="@string/action_llamar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_preferencias"
        android:icon="@drawable/common_full_open_on_phone"
        android:title="@string/action_preferencias"
        app:showAsAction="never" />
</menu>
