<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.example.adrin.proyecto_centro_estetico.DatosUsuarioActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_cuenta_usuario"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/PopupOverlay"
            app:titleTextColor="@color/white">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Nombre de usuario: " />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/nombreApellidos"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="DNI: " />

    <EditText
        android:id="@+id/dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/DNI"
        android:inputType="textPersonName"
        android:maxLength="9"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Teléfono: " />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/telf"
        android:inputType="phone"
        android:maxLength="9"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Correo: " />

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark" />

    <CheckBox
        android:id="@+id/enfermedades"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/enfermedades"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/disMedicos"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="-34dp"
        android:text="@string/dispMedicos"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/alergias"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/alergias"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/medicamentos"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="-31dp"
        android:text="@string/medicamentos"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/botCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_red_dark"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <ImageButton
        android:id="@+id/botEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-55dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_green_light"
        app:srcCompat="@android:drawable/ic_menu_send" />

</LinearLayout>

