<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.adrin.proyecto_centro_estetico.CrearTratamientoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_crear_tratamiento"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/PopupOverlay"
            app:titleTextColor="@color/white"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="22dp"
        android:entries="@array/list_categoria_entry_values"
        android:hint="@string/hint_categoria_crear"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre_nuevo_tra"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_categoria"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:hintTextAppearance="@color/black"
        app:layout_anchor="@id/appbar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/nombre_tratamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_nombre_crear_tra"
            android:maxLength="20"
            android:inputType="text"
            android:nextFocusLeft="@id/toolbar_crear_tratamiento"
            android:nextFocusUp="@id/toolbar_crear_tratamiento"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_descripcion_nuevo_tra"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/til_nombre_nuevo_tra"
        android:layout_below="@+id/til_nombre_nuevo_tra"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:hintTextAppearance="@color/black"
        app:layout_anchor="@id/appbar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/descripcion_nuevo_tratamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_descripcion_crear_tra"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_esteticista_nuevo_tra"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/til_descripcion_nuevo_tra"
        android:layout_below="@+id/til_descripcion_nuevo_tra"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:hintTextAppearance="@color/black"
        app:layout_anchor="@id/appbar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/esteticista_nuevo_tratamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_esteticista_crear"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_precio_nuevo_tra"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/til_esteticista_nuevo_tra"
        android:layout_below="@+id/til_esteticista_nuevo_tra"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:hintTextAppearance="@color/black"
        app:layout_anchor="@id/appbar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/precio_nuevo_tratamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_precio_crear"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_crear_aceptar"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinner_categoria"
        android:layout_alignTop="@+id/btn_crear_cancelar"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/btn_resumen_aceptar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_crear_cancelar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/spinner_categoria"
        android:layout_marginBottom="53dp"
        android:layout_marginRight="16dp"
        android:text="@string/limpiar"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_imagen_cancelar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_precio_nuevo_tra"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:text="@string/tn_seleccion_imagen"
        android:textStyle="bold" />


</RelativeLayout>
